Add member update,delete,findID,findPw,checkUserId with Ajax

--- a/src/main/resources/templates/member/myPage.html
+++ b/src/main/resources/templates/member/myPage.html
@@ -52,8 +52,8 @@
         <p><strong>전화번호:</strong> <span th:text="${session.user.phone}"></span></p>
     </div>
     <div class="buttons">
-        <button onclick="location.href='/modifyUserInfo'">회원 정보 수정</button>
-        <button onclick="location.href='/withdrawal'">회원 탈퇴</button>
+        <button onclick="location.href='/member/update'">회원 정보 수정</button>
+        <button onclick="location.href='/member/delete'">회원 탈퇴</button>
     </div>
 </div>
 </body>
