--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -48,7 +48,7 @@
         <th:block th:if="${session.user == null}">
             <div class="buttons">
                 <a href="/member/login"><button>로그인</button></a>
-                <a href="/member/signup"><button>회원가입</button></a>
+                <a href="/member/signUp"><button>회원가입</button></a>
             </div>
         </th:block>
         <th:block th:if="${session.user != null}">
