--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -86,7 +86,7 @@
         <button type="submit">로그인</button>
     </form>
     <div class="buttons">
-        <a href="/member/signup">회원가입</a>
+        <a href="/member/signUp">회원가입</a>
         <a href="/member/findId">아이디찾기</a>
         <a href="/member/findPw">비밀번호찾기</a>
     </div>
