--- a/src/main/resources/templates/member/signUp.html
+++ b/src/main/resources/templates/member/signUp.html
@@ -54,7 +54,7 @@
 <body>
 <div class="container">
     <h1>회원가입</h1>
-    <form action="/register" method="post">
+    <form method="post">
         <div class="form-group">
             <label for="name">이름:</label>
             <input type="text" id="name" name="name" required>
@@ -82,7 +82,7 @@
         </div>
         <div class="form-group">
             <label for="phone">전화번호:</label>
-            <input type="tel" id="phone" name="phone" required>
+            <input type="number" id="phone" name="phone" required>
         </div>
         <button type="submit">가입하기</button>
         <input type="hidden" id="checkUserIdUrl" th:value="@{/member/checkUserId}" />
