--- a/src/main/resources/templates/pay/order.html
+++ b/src/main/resources/templates/pay/order.html
@@ -1,44 +1,97 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-
-<title>장바구니</title>
+    <meta charset="UTF-8">
+    <title>장바구니</title>
 </head>
 <body>
+<h3>장바구니 목록</h3>
 
-	<h3>장바구니 목록</h3>
+<table>
+    <tr>
+        <th>상품번호</th>
+        <th>주문 번호</th>
+        <th>주문자 번호</th>
+        <th>운송장번호</th>
+        <th>주문일</th>
+        <th>주문상태</th>
+        <th>주문수량</th>
+        <th>상품가격</th>
+        <th>주문수정</th>
+        <th>주문삭제</th>
+    </tr>
 
-	<table>
-		<tr>
-			<th>상품번호</th>
-			<th>주문자 번호</th>
-			<th>운송장번호</th>
-			<th>주문일</th>
-			<th>주문상태</th>
-			<th>주문수량</th>
-			<th>상품가격</th>
-			<th>주문수정</th>
-			<th>주문삭제</th>
-		</tr>
+    <tr th:each="row : ${orderlist}">
+        <td th:text="${row.order_id}"></td>
+        <td th:text="${row.member_id}"></td>
+        <td th:text="${row.orderitems_id}"></td>
+        <td th:text="${row.delivery_id}"></td>
+        <td th:text="${row.order_date}"></td>
+        <td th:text="${row.status}"></td>
+        <td th:text="${row.total_item_count}"></td>
+        <td th:text="${row.total_order_price}"></td>
+        <td>
+            <a th:href="@{'/pay/update/' + ${row.order_id}}">수정</a>
+        </td>
+        <td>
+            <a th:href="@{'/pay/delete/' + ${row.order_id}}">삭제</a>
+        </td>
 
-		<tr th:each="row : ${orderlist}">
-			<td th:text="${row.order_id}"></td>
-			<td th:text="${row.member_id}"></td>
-			<td th:text="${row.orderitems_id}"></td>
-			<td th:text="${row.delivery_id}"></td>
-			<td th:text="${row.order_date}"></td>
-			<td th:text="${row.status}"></td>
-			<td th:text="${row.total_item_count}"></td>
-			<td th:text="${row.total_item_count}"></td>
-			<td th:text="${row.total_order_price}"></td>
-			<td><a th:href="@{'/pay/update/' + ${row.order_id}}">수정</a>
-			</td>
-			<td><a th:href="@{'/pay/delete/' + ${row.order_id}}">삭제</a>
-			</td>
+    </tr>
+</table>
 
-		</tr>
-	</table>
+<!-- jQuery -->
+<script
+        type="text/javascript"
+        src="https://code.jquery.com/jquery-1.12.4.min.js"
+></script>
+<!-- iamport.payment.js -->
+<script
+        type="text/javascript"
+        src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"
+></script>
+<script>
+    var IMP = window.IMP;
+    IMP.init("imp01786831");
 
+    function requestPay() {
+        // 선택된 결제 방법 가져오기
+        var selectedPayMethod = document.querySelector('input[name="pay_method"]:checked').value;
+        // 상품가격 가져오기
+        var totalOrderPrice = parseFloat(document.querySelector('td:nth-child(8)').innerText);
+     // 상품번호 가져오기
+        var orderitem = parseFloat(document.querySelector('td:nth-child(3)').innerText);
+
+        IMP.request_pay(
+            {
+                pg: "html5_inicis",        // KG이니시스 pg파라미터 값
+                pay_method: selectedPayMethod,    // 결제 방법
+                merchant_uid: orderitem,// 주문번호
+                name: orderitem,        // 상품 명
+                amount: totalOrderPrice,            // 금액
+                buyer_email: "gildong@gmail.com",
+                buyer_name: "홍길동",
+                buyer_tel: "010-4242-4242",
+                buyer_addr: "서울특별시 강남구 신사동",
+                buyer_postcode: "01181"
+            },
+            function (rsp) {
+                // rsp.imp_uid 값으로 결제 단건조회 API를 호출하여 결제결과를 판단합니다.
+                if (rsp.success) {
+                    // 서버 검증 요청 부분
+                } else {
+                    alert("결제에 실패하였습니다. 에러 내용: " + rsp.error_msg);
+                }
+            }
+        );
+    }
+</script>
+
+<label><input type="radio" name="pay_method" value="card" checked>신용카드</label>
+<label><input type="radio" name="pay_method" value="trans">실시간 계좌이체</label>
+<label><input type="radio" name="pay_method" value="vbank">가상계좌</label>
+<label><input type="radio" name="pay_method" value="phone">휴대폰 소액결제</label>
+<button onclick="requestPay()">결제하기</button>
+<!-- 결제하기 버튼 생성 -->
 </body>
 </html>
