--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,6 +8,6 @@
     <h1 th:text="${msg}"></h1>
     <p>테스트요</p>
     
-    <a href="pay/order">장바구니</a>
+    <a href="/pay/order">장바구니</a>
 </body>
 </html>
