--- a/src/main/resources/templates/board/QnA_view.html
+++ b/src/main/resources/templates/board/QnA_view.html
@@ -39,7 +39,21 @@
         <button>삭제</button>
     </a>
 </div>
+<div>
+    <h5>댓글</h5>
 
+    <form class="replyWrite" method="POST">
+        <textarea name="contents" placeholder="바른말을 사용합시다"></textarea>
+
+        <button>작성</button>
+    </form>
+
+    <fieldset class="reply" th:each="row : ${replys }">
+        <p>${row.nick } | ${row.w_date }</p>
+
+        <pre>${row.contents }</pre>
+    </fieldset>
+</div>
 
 
 </body>
