--- a/src/main/resources/templates/board/fB_view.html
+++ b/src/main/resources/templates/board/fB_view.html
@@ -40,7 +40,20 @@
             </a>
         </div>
 
+        <div>
+        <h5>댓글</h5>
 
+        <form class="replyWrite" method="POST">
+            <textarea name="contents" placeholder="바른말을 사용합시다"></textarea>
 
+            <button>작성</button>
+        </form>
+
+        <fieldset class="reply" th:each="row : ${replys }">
+            <p>${row.nick } | ${row.w_date }</p>
+
+            <pre>${row.contents }</pre>
+        </fieldset>
+        </div>
 </body>
 </html>
