--- a/src/main/resources/templates/member/signUp.html
+++ b/src/main/resources/templates/member/signUp.html
@@ -17,13 +17,14 @@
         <div class="mb-8 text-center">
             <h1 class="text-3xl font-bold text-[#1a3c1a] dark:text-[#f0f8f0]">Smart Farm Sign Up</h1>
         </div>
-        <form class="space-y-6">
+        <form class="space-y-6" method="post">
             <div>
                 <label for="userid" class="mb-2 block text-sm font-medium text-[#1a3c1a] dark:text-[#f0f8f0]">
                     Username
                 </label>
                 <input
                         id="userid"
+                        name="userid"
                         placeholder="Enter your username"
                         class="block w-full rounded-lg border border-[#1a3c1a] bg-[#f0f8f0] p-2.5 text-[#1a3c1a] placeholder-[#1a3c1a]/50 focus:border-[#1a3c1a] focus:ring-[#1a3c1a] dark:border-[#f0f8f0] dark:bg-[#2a4e2a] dark:text-[#f0f8f0] dark:placeholder-[#f0f8f0]/50 dark:focus:border-[#f0f8f0] dark:focus:ring-[#f0f8f0]"
                         type="text"
@@ -38,6 +39,7 @@
                 </label>
                 <input
                         id="userpw"
+                        name="userpw"
                         placeholder="Enter your password"
                         class="block w-full rounded-lg border border-[#1a3c1a] bg-[#f0f8f0] p-2.5 text-[#1a3c1a] placeholder-[#1a3c1a]/50 focus:border-[#1a3c1a] focus:ring-[#1a3c1a] dark:border-[#f0f8f0] dark:bg-[#2a4e2a] dark:text-[#f0f8f0] dark:placeholder-[#f0f8f0]/50 dark:focus:border-[#f0f8f0] dark:focus:ring-[#f0f8f0]"
                         type="password"
@@ -49,6 +51,7 @@
                 </label>
                 <input
                         id="name"
+                        name="name"
                         placeholder="Enter your name"
                         class="block w-full rounded-lg border border-[#1a3c1a] bg-[#f0f8f0] p-2.5 text-[#1a3c1a] placeholder-[#1a3c1a]/50 focus:border-[#1a3c1a] focus:ring-[#1a3c1a] dark:border-[#f0f8f0] dark:bg-[#2a4e2a] dark:text-[#f0f8f0] dark:placeholder-[#f0f8f0]/50 dark:focus:border-[#f0f8f0] dark:focus:ring-[#f0f8f0]"
                         type="text"
@@ -60,6 +63,7 @@
                 </label>
                 <input
                         id="nick"
+                        name="nick"
                         placeholder="Enter your nickname"
                         class="block w-full rounded-lg border border-[#1a3c1a] bg-[#f0f8f0] p-2.5 text-[#1a3c1a] placeholder-[#1a3c1a]/50 focus:border-[#1a3c1a] focus:ring-[#1a3c1a] dark:border-[#f0f8f0] dark:bg-[#2a4e2a] dark:text-[#f0f8f0] dark:placeholder-[#f0f8f0]/50 dark:focus:border-[#f0f8f0] dark:focus:ring-[#f0f8f0]"
                         type="text"
@@ -71,6 +75,7 @@
                 </label>
                 <input
                         id="email"
+                        name="email"
                         placeholder="Enter your email"
                         class="block w-full rounded-lg border border-[#1a3c1a] bg-[#f0f8f0] p-2.5 text-[#1a3c1a] placeholder-[#1a3c1a]/50 focus:border-[#1a3c1a] focus:ring-[#1a3c1a] dark:border-[#f0f8f0] dark:bg-[#2a4e2a] dark:text-[#f0f8f0] dark:placeholder-[#f0f8f0]/50 dark:focus:border-[#f0f8f0] dark:focus:ring-[#f0f8f0]"
                         type="email"
@@ -82,6 +87,7 @@
                 </label>
                 <input
                         id="address"
+                        name="address"
                         placeholder="Enter your address"
                         class="block w-full rounded-lg border border-[#1a3c1a] bg-[#f0f8f0] p-2.5 text-[#1a3c1a] placeholder-[#1a3c1a]/50 focus:border-[#1a3c1a] focus:ring-[#1a3c1a] dark:border-[#f0f8f0] dark:bg-[#2a4e2a] dark:text-[#f0f8f0] dark:placeholder-[#f0f8f0]/50 dark:focus:border-[#f0f8f0] dark:focus:ring-[#f0f8f0]"
                         type="text"
@@ -93,13 +99,13 @@
                 </label>
                 <input
                         id="phone"
+                        name="phone"
                         placeholder="Enter your phone number"
                         class="block w-full rounded-lg border border-[#1a3c1a] bg-[#f0f8f0] p-2.5 text-[#1a3c1a] placeholder-[#1a3c1a]/50 focus:border-[#1a3c1a] focus:ring-[#1a3c1a] dark:border-[#f0f8f0] dark:bg-[#2a4e2a] dark:text-[#f0f8f0] dark:placeholder-[#f0f8f0]/50 dark:focus:border-[#f0f8f0] dark:focus:ring-[#f0f8f0]"
                         type="text"
                 />
             </div>
             <button
-                    type="submit"
                     class="w-full rounded-lg bg-[#1a3c1a] px-5 py-2.5 text-center text-sm font-medium text-[#f0f8f0] hover:bg-[#2a4e2a] focus:outline-none focus:ring-4 focus:ring-[#1a3c1a]/50 dark:bg-[#f0f8f0] dark:text-[#1a3c1a] dark:hover:bg-[#d0e8d0] dark:focus:ring-[#f0f8f0]/50"
             >
                 Sign Up
