--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -6,12 +6,9 @@
     <title>Smart Farm Login</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-<!--
-// v0 by Vercel.
-// https://v0.dev/t/XaSwrKvcfLH
--->
-
+<body class="bg-[#f0f8f0]">
+<br>
+<div th:replace="~{header :: header}"></div>
 <div class="flex h-screen w-full items-center justify-center bg-[#f0f8f0]">
     <div class="mx-4 w-full max-w-md rounded-lg bg-white p-8 shadow-lg">
         <div class="mb-8 text-center">
@@ -62,5 +59,6 @@
         </div>
     </div>
 </div>
+<div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
