--- a/src/main/resources/templates/piece.html
+++ b/src/main/resources/templates/piece.html
@@ -11,10 +11,10 @@
 		<ul>
 			<li><a href="/">Home</a></li>
 			<li><a href="/board/notice">공지사항</a></li>
-			<li><a href="/freeboard">자유게시판</a></li>
+			<li><a href="/board/freeBoard">자유게시판</a></li>
 			<li><a href="/board/freemarket">장터</a></li>
-			<li><a href="/qna">질문게시판</a></li>
-			<li><a href="/chatbot">챗봇</a></li>
+			<li><a href="/board/QnA">질문게시판</a></li>
+			<li><a href="/chat/chatbot">챗봇</a></li>
 		</ul>
 		
 		<hr>
