--- a/src/main/resources/templates/board/fB_view.html
+++ b/src/main/resources/templates/board/fB_view.html
@@ -2,45 +2,52 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>자유게시판</title>
 </head>
 <body>
+<div th:replace="~{piece :: header}"></div>
 
+<h1>자유 게시판 상세 보기</h1>
+<hr>
 
-        <table th:with="row = ${row}">
+<table th:with="row = ${row}">
 
-            <tr>
-                <th th:text="제목"></th>
-                <td th:text="${row.title}"></td>
-            </tr>
-            <tr>
-                <th th:text="작성자"></th>
-                <td th:text="${row.nick}"></td>
-            </tr>
-            <tr>
-                <th th:text="조회수"></th>
-                <td th:text="${row.v_count }"></td>
-                <th th:text="작성일"></th>
-                <td th:text="${row.w_date}"></td>
-            </tr>
-            <tr>
-                <th th:text="내용"></th>
-                <td th:text="${row.contents}"></td>
-            </tr>
+    <tr>
+        <th>제목</th>
+        <td th:text="${row.title}"></td>
+    </tr>
+    <tr>
+        <th>작성자</th>
+        <td th:text="${row.nick}"></td>
+    </tr>
+    <tr>
+        <th>조회수</th>
+        <td th:text="${row.v_count}"></td>
+        <th>작성일</th>
+        <td th:text="${row.w_date}"></td>
+    </tr>
+    <tr>
+        <th>내용</th>
+        <td th:utext="${row.contents}"></td>
+    </tr>
 
-        </table>
+</table>
 
-        <div th:if="${row.nick == user.nick }">
-            <a href="$/board/updatefB/${row.idx }">
-                <button>수정</button>
-            </a>
+<div th:if="${row != null} and ${user != null} and ${row.member_id == user.id}">
+    <form th:action="'/board/updatefB/' + ${row.id}" method="get">
+        <input type="submit" value="수정">
+    </form>
+    <form th:action="'/board/deletefB/' + ${row.id}" method="post" onsubmit="return delcheck()">
+        <input type="submit" value="삭제">
+    </form>
+</div>
 
-            <a href="/board/delete/${row.idx }">
-                <button>삭제</button>
-            </a>
-        </div>
+<script>
+    function delcheck() {
+        return confirm('정말로 삭제하시겠습니까?');
+    }
+</script>
 
-
-
+<div th:replace="~{piece :: footer}"></div>
 </body>
 </html>
