--- a/src/main/resources/templates/board/notice_view.html
+++ b/src/main/resources/templates/board/notice_view.html
@@ -25,7 +25,7 @@
 		</tr>
 		<tr>
 			<th>내용</th>
-			<td th:utext="${notice.contents}"></td>
+			<td th:utext="${notice.contents}"></td>  <!-- utext는 <p> 태그를 제외하고 출력함 -->
 		</tr>
 		<tr>
 			<th>작성일</th>
