--- a/src/main/resources/templates/member/signUp.html
+++ b/src/main/resources/templates/member/signUp.html
@@ -82,6 +82,7 @@
         </div>
         <div class="form-group">
             <label for="phone">전화번호:</label>
+            <input type="text" id="phone" name="phone" required>
         </div>
         <button type="submit">가입하기</button>
         <input type="hidden" id="checkUserIdUrl" th:value="@{/member/checkUserId}" />
