--- a/src/main/resources/templates/board/QnA_view.html
+++ b/src/main/resources/templates/board/QnA_view.html
@@ -5,7 +5,10 @@
     <title>QnA_View</title>
 </head>
 <body>
+<div th:replace="~{piece :: header}"></div>
 
+<h1>질의 응답 게시판 상세 보기</h1>
+<hr>
 
 <table th:with="row = ${row}">
 
@@ -25,22 +28,27 @@
     </tr>
     <tr>
         <th th:text="내용"></th>
-        <td th:text="${row.contents}"></td>
+        <td th:utext="${row.contents}"></td>
     </tr>
 
 </table>
 
-<div th:if="${row.nick == user.nick }">
-    <a href="$/board/updateQnA/${row.idx }">
-        <button>수정</button>
-    </a>
-
-    <a href="/board/delete/${row.idx }">
-        <button>삭제</button>
-    </a>
+<div th:if="${row != null} and ${user != null} and ${row.member_id == user.id}">
+    <form th:action="'/board/updateQnA/' + ${row.id}" method="get">
+        <input type="submit" value="수정">
+    </form>
+    <form th:action="'/board/deleteQnA/' + ${row.id}" method="post" onsubmit="return delcheck()">
+        <input type="submit" value="삭제">
+    </form>
 </div>
 
+<script>
+    function delcheck() {
+        return confirm('정말로 삭제하시겠습니까?');
+    }
+</script>
 
 
+<div th:replace="~{piece :: footer}"></div>
 </body>
 </html>
