--- a/src/main/resources/templates/board/freeBoard.html
+++ b/src/main/resources/templates/board/freeBoard.html
@@ -60,7 +60,7 @@
 
     <br>
 
-    <form method="get" action="/board/freeBoard">
+    <form method="get" action="/freeBoard">
         <select name="type">
             <option value="title">제목</option>
             <option value="nick">작성자</option>
