--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <footer class="bg-[#f0f8f0] px-6 py-4">
-    <div class="flex flex-col items-center justify-between md:flex-row">
+    <div class="max-w-[1100px] mx-auto flex flex-col items-center justify-between md:flex-row">
         <div class="flex items-center">
             <svg
                     xmlns="http://www.w3.org/2000/svg"
