--- a/src/main/resources/templates/member/signUp.html
+++ b/src/main/resources/templates/member/signUp.html
@@ -6,12 +6,8 @@
     <title>Smart Farm Sign Up</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-<!--
-// v0 by Vercel.
-// https://v0.dev/t/nEB2lif9MmG
--->
-
+<body class="bg-[#f0f8f0]">
+<div th:replace="~{header :: header}"></div>
 <div class="flex min-h-screen w-full items-center justify-center bg-[#f0f8f0]">
     <div class="mx-4 my-20 w-full max-w-md rounded-lg bg-white p-8 shadow-lg ">
         <div class="mb-8 text-center">
@@ -138,5 +134,6 @@
         }
         }
 </script>
+<div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
